Update. Working buttons on Home page

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <div class="carousel-caption">
                 <h1 class="display-2">AlfaWay</h1>
                 <h3>Become better</h3>
-                <button type="button" class="btn btn-outline-light btn-lg">Login</button>
-                <button type="button" class="btn btn-primary btn-lg">Register</button>
+                <a href="login_registration/login.html"><button type="button" class="btn btn-outline-light btn-lg">Login</button></a>
+                <a href="login_registration/signup.html"><button type="button" class="btn btn-primary btn-lg">Register</button></a>
             </div>
         </div>
         <!-- <div class="carousel-item">
