Updated Sign up page and Profile page

--- a/login_registration/signup.html
+++ b/login_registration/signup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html"; charset="utf-8">
-	<title>AlfaWay</title>
+	<title>Signup|AlfaWay</title>
 	<link href="signup.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
 	<style>
@@ -52,6 +52,7 @@
 			<input type="text" name="username" placeholder="Last name"><br><br>
 			<input type="password" name="pass" placeholder="Create Password"><br><br>
 			<input type="password" name="pass" placeholder="Confirm Password"><br><br>
+			<input type="text" name="speciality" placeholder="Speciality"><br><br>
 			<input type="text" name="email" placeholder="Email"><br><br>
 			<input type="button" value="Sign Up" onclick="myFunction()"><br><br>
 			<div id="msg">You signed up successfully!</div>
