--- a/profile/landing.html
+++ b/profile/landing.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Profile</title>
         <link rel="stylesheet" href="landing.css">
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="fontawesome/css/fontawesome.min.css">
