--- a/login_registration/forget.html
+++ b/login_registration/forget.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html"; charset="utf-8">
-	<title>AlfaWay</title>
+	<title>Forget|AlfaWay</title>
 	<link href="forget.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
 	<style>
