--- a/login_registration/login.html
+++ b/login_registration/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html"; charset="utf-8">
-	<title>AlfaWay</title>
+	<title>Login|AlfaWay</title>
 	<link href="login.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
 </head>
