--- a/login_registration/signup.html
+++ b/login_registration/signup.html
@@ -5,6 +5,10 @@
 	<title>Signup|AlfaWay</title>
 	<link href="signup.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	<style>
 		#msg {
 			visibility: hidden;
@@ -52,8 +56,26 @@
 			<input type="text" name="username" placeholder="Last name"><br><br>
 			<input type="password" name="pass" placeholder="Create Password"><br><br>
 			<input type="password" name="pass" placeholder="Confirm Password"><br><br>
-			<input type="text" name="speciality" placeholder="Speciality"><br><br>
 			<input type="text" name="email" placeholder="Email"><br><br>
+			<!-- <input type="text" name="speciality" placeholder="Speciality"><br><br> -->
+			<!-- <li class="nav-item dropdown">
+        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          		Dropdown link</a>
+       			<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          			<a class="dropdown-item" href="#">Action</a>
+          			<a class="dropdown-item" href="#">Another action</a>
+          			<a class="dropdown-item" href="#">Something else here</a>
+       			</div>
+      		</li> -->
+      		<ul>
+	      		<li><a class="dropdown">Speciality</a>
+	      			<ul>
+	      				<li><a>UX/UI</a></li>
+	      				<li><a>DS</a></li>
+	      				<li><a>ML</a></li>
+	      			</ul>
+	      		</li>
+	      	</ul>
 			<input type="button" value="Sign Up" onclick="myFunction()"><br><br>
 			<div id="msg">You signed up successfully!</div>
 			<script>
