--- a/profile/profile.html
+++ b/profile/profile.html
@@ -22,34 +22,57 @@
 			<hr>
 			<p><b><i class="fas fa-asterisk info"></i>Skills</b></p>
 			<p>UX/UI Design</p>
-			<div class="skill-bar">
-				<div class="progress-bar" style="width:80%">8L	
+			<div class="skill-space">
+				<div class="skill-bar">
+					<div class="progress-bar" style="width:80%">8L	
+					</div>
+				</div>
+				<div class="improve-button">
+					<br>
+					<a href=""><input type="button" value="Improve"></a>
 				</div>
 			</div>
 			<p>Data Science</p>
-			<div class="skill-bar">
-				<div class="progress-bar" style="width:40%">4L	
+			<div class="skill-space">
+				<div class="skill-bar">
+					<div class="progress-bar" style="width:40%">4L	
+					</div>
+				</div>
+				<div class="improve-button">
+					<br>
+					<a href=""><input type="button" value="Improve"></a>
 				</div>
 			</div>
 			<p>Public Speech</p>
-			<div class="skill-bar">
-				<div class="progress-bar" style="width:20%">2L	
+			<div class="skill-space">
+				<div class="skill-bar">
+					<div class="progress-bar" style="width:20%">2L	
+					</div>
+				</div>
+				<div class="improve-button">
+					<br>
+					<a href=""><input type="button" value="Improve"></a>
 				</div>
 			</div>
 			<p>Teamwork</p>
-			<div class="skill-bar">
-				<div class="progress-bar" style="width:60%">6L	
+			<div class="skill-space">
+				<div class="skill-bar">
+					<div class="progress-bar" style="width:60%">6L	
+					</div>
+				</div>
+				<div class="improve-button">
+					<br>
+					<a href=""><input type="button" value="Improve"></a>
 				</div>
 			</div>
 			<br><br>
-			<div>
-				<a href="/home/kumir/AlfaFront/login_registration/login.html"><input type="button" value="Log Out"></a><br>
+			<div id="button-container">
+				<a href="/home/kumir/AlfaFront/login_registration/login.html"><button type="button" class="btn btn-outline-light btn-lg">Log Out</button></a>
+                <a href="settings.html"><button type="button" class="btn btn-primary btn-lg">Settings</button></a>
 			</div>
 		</div>
 	</div>
 
-	<div class="skill-tree">
-		
-	</div>
+	
 </body>
 </html>
