Updated tree, profile. Created bio.

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -19,6 +19,7 @@
 			<p><i class="fas fa-database info"></i>Data Scientist</p>
 			<p><i class="fas fa-envelope info"></i>dariga@mail.com</p>
 			<p><i class="fas fa-phone info"></i>+77777777777</p>
+			<a href="bio.html"><input type="button" class="bio" value="Change Bio"></a><br>
 			<hr>
 			<p><b><i class="fas fa-asterisk info"></i>Skills</b></p>
 			<p>UX/UI Design</p>
