Created skill levels

--- a/tree/tree.html
+++ b/tree/tree.html
@@ -19,8 +19,8 @@
     </head>
     <body>
     	<div id="button-container">
-				<a href="/home/kumir/AlfaFront/login_registration/login.html"><button type="button" class="btn btn-outline-light btn-lg">Log Out</button></a>
-                <a href="settings.html"><button type="button" class="btn btn-primary btn-lg">Settings</button></a>
+				<a href="/home/kumir/AlfaFront/profile/profile.html"><button type="button" class="btn btn-outline-light btn-lg">Profile</button></a>
+                <a href="/home/kumir/AlfaFront/skill-levels/skills.html"><button type="button" class="btn btn-primary btn-lg">Levels</button></a>
 		</div>
          <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         
