--- a/skill-levels/levels.html
+++ b/skill-levels/levels.html
@@ -1,6 +1,59 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>Levels|AlfaWay</title>
+	<link rel="stylesheet" type="text/css" href="levels.css">
+</head>
+<body>
+	<div class="center">
+		<h1>UI/UX</h1>
+		<br>
+		<div class="skillBox">
+			<p>L5</p>
+			<p>250k</p>
+			<div class="skill">
+				<div class="skill_level" style="width: 0%"></div>
+			</div>
+		</div>
+		<br>
+		<div class="skillBox">
+			<p>L4</p>
+			<p>200k</p>
+			<div class="skill">
+				<div class="skill_level" style="width: 40%;color: green;"></div>
+			</div>
+		</div>
+		<br>
+		<div class="skillBox">
+			<p>L3</p>
+			<p>180k</p>
+			<div class="skill">
+				<div class="skill_level" style="width: 100%"></div>
+			</div>
+		</div>
+		<br>
+		<div class="skillBox">
+			<p>L2</p>
+			<p>150k</p>
+			<div class="skill">
+				<div class="skill_level" style="width: 100%"></div>
+			</div>
+		</div>
+		<br>
+		<div class="skillBox">
+			<p>L1</p>
+			<p>100k</p>
+			<div class="skill">
+				<div class="skill_level" style="width: 100%"></div>
+			</div>
+		</div>
+	</div>
+</body>
+</html>
+
+<!-- <!DOCTYPE html>
+<html>
+<head>
 	<meta charset="utf-8">
 	<title>Skill-levels|AlfaWay</title>
 	<link rel="stylesheet" type="text/css" href="levels.css">
@@ -39,49 +92,4 @@
 </body>
 </html>
 
-<!-- <!DOCTYPE html>
-<html>
-<head>
-	<title>Grades|AlfaWay</title>
-	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="grades.css">
-</head>
-<body>
-	<div class="table">
-        	<div class="table-title">
-        		Grades
-        	</div>
-        	<div class="prog">
-        		<div class="level">
-        			<div class="progress">
-					  <div class="progress-bar" role="progressbar" aria-valuenow="100"
-					  aria-valuemin="0" aria-valuemax="100" style="width:100%">
-					    L1
-					  </div>
-					</div>
-					<div class="tasks">
-						<span>Photoshop:Shadows</span>
-						<br>
-						<span>Scretch:Shapes</span>
-					</div>
-        		</div>
-        		<div class="level">
-        			<div class="progress">
-					  <div class="progress-bar" role="progressbar" aria-valuenow="100"
-					  aria-valuemin="0" aria-valuemax="100" style="width:100%">
-					    L2
-					  </div>
-					</div>
-        		</div>
-        		<div class="level">
-        			<div class="progress">
-					  <div class="progress-bar" role="progressbar" aria-valuenow="50"
-					  aria-valuemin="0" aria-valuemax="100" style="width:50%">
-					    L3
-					  </div>
-					</div>
-        		</div>
-        	</div>    
-        </div>
-</body>
-</html> -->
+ -->
