--- a/quiz/create.html
+++ b/quiz/create.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Skill-Search|AlfaWay</title>
-	<link rel="stylesheet" type="text/css" href="search.css">
+	<title>Question-create|AlfaWay</title>
+	<link rel="stylesheet" type="text/css" href="create.css">
 </head>
 <body>
 	<div class="header">
 		<form>
-			<h1>Find skills You want to improve</h1>
+			<h1>Create skill checking questions</h1>
 			<div class="form-box">
 				<input type="text" class="search-field skill" placeholder="Hardskill or Softskill">
-				<button class="search-btn" type="button">Search</button>
+				<button class="search-btn" type="button"><p>Create</p></button>
 			</div>
 		</form>
 	</div>
